--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,7 +214,7 @@
     <string name="title_general_error">Oh… Something isn’t working</string>
     <string name="subtitle_general_error">An unknown error occurred. Please close the app and try again later.</string>
     <string name="error_register">We were unable to create a profile for you</string>
-    <string name="spend_policy_title">In order to always bring you the best new offers, you will be able to buy a maximum of 1 gift cards from every company each month</string>
+    <string name="spend_policy_title">In order to always bring you the best new offers, you will be able to buy a maximum of 1 gift card from every company each month</string>
     <string name="i_understand">I Understand</string>
     <string name="ecosystem_apps">Ecosystem apps</string>
     <string name="gift_cards">Gift cards</string>
