--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,5 +244,8 @@
     <string name="transfer_connection_error_message">There was a problem establishing a connection. Please try again later.</string>
     <string name="transaction_failed_subtitle">We received your send request but something went wrong. Please try again later.</string>
     <string name="sending_completed">Sending completed</string>
+    <string name="send_to_apps_dialog_title">The future is here!</string>
+    <string name="send_to_apps_dialog_info">Now you can send Kin to any app in the ecosystem using Kinit!\nJust look for the “Send Kin” button  on the apps page to try it for yourself</string>
+
 
 </resources>
