--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,6 +210,7 @@
     <string name="remember_answers_warning_desc">It is important to remember your answers. You will be required to provide exactly the same answers when restoring your account and will not be able to restore your account without them. The only way to reset your answers is by creating a new backup.</string>
     <string name="dialog_continue">I understand, continue</string>
     <string name="send_feedback_title">How can we do better?</string>
+    <string name="send_feedback_page_title">Suggestion Box</string>
     <string name="send_feedback_text">Thoughts? Suggestions? Share them here! If you need help resolving a problem, check out "I Need Help"</string>
     <string name="feedback_email_address">feedback@kinitapp.com</string>
     <string name="feedback_email_subject">Feedback</string>
