--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,4 +263,5 @@
     <string name="kinecosystem_transfer_activity_title">Kin Ecosystem</string>
     <string name="kinecosystem_transfer_agree">I agree</string>
     <string name="kinecosystem_transfer_title">In order to send Kin, %1$s would like to receive your Kin account information (i.e. your public address) from Kinit.</string>
+    <string name="linking_activity_confirmation_message">Please give Kinit permission to receive your Kin account information (i.e. your public address) and to approve future transactions for your %s Kin Account.</string>
 </resources>
