--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -264,4 +264,9 @@
     <string name="kinecosystem_transfer_agree">I agree</string>
     <string name="kinecosystem_transfer_title">In order to send Kin, %1$s would like to receive your Kin account information (i.e. your public address) from Kinit.</string>
     <string name="linking_activity_confirmation_message">Please give Kinit permission to receive your Kin account information (i.e. your public address) and to approve future transactions for your %s Kin Account.</string>
+    <string name="topup_title_to">Top up</string>
+    <string name="topup_button">Top up</string>
+    <string name="topup_in_progress">Topping up</string>
+    <string name="topup_failed">Topup Failed</string>
+    <string name="topup_success">Topup success</string>
 </resources>
